springboot-docker-consumerV1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-docker-consumer-v1 
  namespace: springboot-application
  labels:
    app: siddhuconsumer
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: siddhuconsumer
      version: v1
  template:
    metadata:
      labels:
        app: siddhuconsumer
        version: v1
    spec:
      containers:
      - name: siddhuconsumer
        image: shdhumale/springboot-docker-consumer-version:latest
        ports:
        - containerPort: 8090     
---

apiVersion: v1
kind: Service
metadata:
  name: siddhuconsumer
  namespace: springboot-application  
  labels:
    app: siddhuconsumer
spec:
  type: NodePort
  selector:
    app: siddhuconsumer
  ports:
  - name: http    
    port: 8090
