springboot-docker-producerV2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-docker-producer-v2
  namespace: springboot-application
  labels:
   app: springboot-docker-producer-v2
   version: v2
spec:
  selector:
    matchLabels:
      component: springboot-docker-producer-v2
      version: v2
  template:
    metadata:
      labels:
        component: springboot-docker-producer-v2
        version: v2
    spec:
      containers:
      - name: springboot-docker-producer-v2
        image: shdhumale/springboot-docker-producer:latest
        ports:
        - containerPort: 8091
          name: http
          protocol: TCP      
---

apiVersion: v1
kind: Service
metadata:
  name: siddhuproducer
  namespace: springboot-application
  labels:
    service: springboot-docker-producer-v2
spec:
  type: NodePort
  selector:
    component: springboot-docker-producer-v2
  ports:
  - name: http
    port: 8091
    targetPort: 8091
