gatewayV1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mysiddhuweb-gateway
  namespace: springboot-application  
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80      
      name: http
      protocol: HTTP
    hosts:
    - "mysiddhuweb.example.com"
