all-in-one-with-version.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mysiddhuweb-gateway
  namespace: springboot-application
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "mysiddhuweb.example.com"
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mysiddhuweb-vs
  namespace: springboot-application
spec:
  hosts:
  - "mysiddhuweb.example.com"
  gateways:
  - mysiddhuweb-gateway
  http:
  - route:
      - destination:
          host: siddhuconsumer
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-docker-producer-v1
  namespace: springboot-application
  labels:
   app: siddhuproducer
   version: v1
spec:
  selector:
    matchLabels:
      component: siddhuproducer
      version: v1
  template:
    metadata:
      labels:
        component: siddhuproducer
        version: v1
    spec:
      containers:
      - name: siddhuproducer
        image: shdhumale/springboot-docker-producer:latest
        ports:
        - containerPort: 8091
          name: http
          protocol: TCP      
---

apiVersion: v1
kind: Service
metadata:
  name: siddhuproducer
  namespace: springboot-application
  labels:
    service: siddhuproducer
spec:
  type: NodePort
  selector:
    component: siddhuproducer
  ports:
  - name: http
    port: 8091
    targetPort: 8091
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-docker-producer-v2
  namespace: springboot-application
  labels:
   app: siddhuproducer
   version: v2
spec:
  selector:
    matchLabels:
      component: siddhuproducer
      version: v2
  template:
    metadata:
      labels:
        component: siddhuproducer
        version: v2
    spec:
      containers:
      - name: siddhuproducer
        image: shdhumale/springboot-docker-producer:latest
        ports:
        - containerPort: 8091
          name: http
          protocol: TCP
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-docker-consumer-v1 
  namespace: springboot-application
  labels:
    app: siddhuconsumer
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: siddhuconsumer
      version: v1
  template:
    metadata:
      labels:
        app: siddhuconsumer
        version: v1
    spec:
      containers:
      - name: siddhuconsumer
        image: shdhumale/springboot-docker-consumer-version:latest
        ports:
        - containerPort: 8090     
---

apiVersion: v1
kind: Service
metadata:
  name: siddhuconsumer
  namespace: springboot-application  
  labels:
    app: siddhuconsumer
spec:
  type: NodePort
  selector:
    app: siddhuconsumer
  ports:
  - name: http    
    port: 8090
