virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mysiddhuweb-vs
  namespace: springboot-application
spec:
  hosts:
  - "mysiddhuweb.example.com"
  gateways:
  - mysiddhuweb-gateway
  http:
  - route:
      - destination:
          host: siddhuconsumer
          port:
            number: 8090
